FIX[qs_sale] change rule of readonly for list price

--- a/qs_sale/views/sale_order_views.xml
+++ b/qs_sale/views/sale_order_views.xml
@@ -13,7 +13,7 @@
                 </field>
                 <field name="pricelist_id" position="attributes">
                     <attribute name="attrs">
-                        {'readonly': [('can_change_list', '=', True)]}
+                        {'readonly': [('can_change_list', '=', False)]}
                     </attribute>
                 </field>
             </field>
