--- a/qs_pers/views/views.xml
+++ b/qs_pers/views/views.xml
@@ -30,11 +30,15 @@
             <field name="arch" type="xml">
                 <field name="vat" position="before">
                     <field name="compute_field" invisible="1"/>
-                    <field name="credit_limit" attrs="{'readonly': [('compute_field', '=', True)]}"
+                    <field name="compute_field_credit_l" invisible="1"/>
+                    <field name="credit_limit" attrs="{'invisible':[('compute_field_credit_l', '=', True)], 'readonly': [('compute_field', '=', True)]}"
                            groups="sales_team.group_sale_manager"/>
                 </field>
                 <field name="property_payment_term_id" position="attributes">
                     <attribute name="attrs">{'readonly': [('compute_field', '=', True)]}</attribute>
+                </field>
+                <field name="property_product_pricelist" position="attributes">
+                    <attribute name="attrs">{'readonly': [('compute_field_credit_l', '=', True)]}</attribute>
                 </field>
                 <field name="property_product_pricelist" position="attributes">
                     <attribute name="groups">sales_team.group_sale_manager</attribute>
