--- a/hrsft_facture_montant_lettres_qweb/views/report_invoice.xml
+++ b/hrsft_facture_montant_lettres_qweb/views/report_invoice.xml
@@ -86,7 +86,7 @@
                     <span t-if="o.move_type == 'in_refund'">Vendor Credit Note</span>
                     <span t-if="o.move_type == 'in_invoice'">Vendor Bill</span>
                     <!--<span t-if="o.name != '/'" t-field="o.name"/>-->
-                    <p t-if="o.name != '/'" t-field="o.name"/><!--<t t-esc="o.secure_sequence_number"></t><t t-esc="o.sequence_number"></t>-->
+                    <p t-if="o.name != '/'" t-field="o.name" style="margin-bottom: -20px;"/><!--<t t-esc="o.secure_sequence_number"></t><t t-esc="o.sequence_number"></t>-->
                 </h6>
             </xpath>
 
