[ADD] Ajout du module qs_product

--- a/qs_product/report/book_rent_report.xml
+++ b/qs_product/report/book_rent_report.xml
@@ -6,6 +6,6 @@
 <field name="report_type">qweb-pdf</field>
 <field name="report_name">qs_product.book_rents_template</field>
 <field name="report_file">qs_product.book_rents_template</field>
-<field name="binding_model_id" ref="product.product_template"/>
+<field name="binding_model_id" ref="product.model_product_template"/>
 <field name="binding_type">report</field>
 </record></odoo>
