--- a/qs_product/report/book_rent_templates.xml
+++ b/qs_product/report/book_rent_templates.xml
@@ -1,36 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="book_rents_template">
-        <t t-call="web.html_container">  
-        <t t-call="web.internal_layout">
-        <t t-foreach="docs" t-as="doc">
-        <div class="page" >
-            <h1>Article <t t-esc="doc.name"/></h1>
-            <table class="table table-condensed">
-                <thead>
-                    <tr>
-                        <th>Nom</th>
-                        <th>Image</th>
-                        <th>Prix de gros</th>
-                        <th>Référence interne</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr t-foreach="docs" t-as="doc" >
-                        <td><t t-esc="doc.name" /></td>
-                        <td><img t-att-src="doc.image_1920" alt="Image"/></td>
-                        <!-- <td ><span t-field="doc.image_1920" widget="image"/></td> -->
-                        <t t-set="pricelist_8" t-value="env['product.pricelist'].search([('is_wholesaleprices','=',True)])"/>
-                        <t t-set="product_price" t-value="env['product.pricelist.item'].search([('pricelist_id','=',pricelist_8.id), ('product_tmpl_id', '=', doc.id)]).fixed_price"/>
+        <t t-call="web.html_container">
+            <t t-call="web.internal_layout">
+                <t t-foreach="docs" t-as="doc">
+                    <div class="page">
+                        <h1>Article <t t-esc="doc.name" /></h1>
+                        <table class="table table-condensed">
+                            <thead>
+                                <tr>
+                                    <th>Nom</th>
+                                    <th>Image</th>
+                                    <th>Prix de gros</th>
+                                    <th>Référence interne</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr t-foreach="docs" t-as="doc">
+                                    <td>
+                                        <t t-esc="doc.name" />
+                                    </td>
+                                    <td>
+                                        <img t-if="doc.image_1920"
+                                            t-att-src="image_data_uri(doc.image_1920)" alt="Image" />
+                                    </td>
+                                    <t t-set="pricelist_8"
+                                        t-value="env['product.pricelist'].search([('is_wholesaleprices','=',True)])" />
+                                    <t t-set="product_price"
+                                        t-value="env['product.pricelist.item'].search([('pricelist_id','=',pricelist_8.id), ('product_tmpl_id', '=', doc.id)]).fixed_price" />
 
-                        <td><t t-esc="product_price" /></td>
-                        <td><t t-esc="doc.default_code" /></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        </t>
-         </t>
+                                    <td>
+                                        <t t-esc="product_price" />
+                                    </td>
+                                    <td>
+                                        <t t-esc="doc.default_code" />
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </t>
+            </t>
         </t>
     </template>
 </odoo>
