--- a/qs_product/report/book_rent_templates.xml
+++ b/qs_product/report/book_rent_templates.xml
@@ -22,7 +22,8 @@
                                     </td>
                                     <td>
                                         <img t-if="doc.image_1920"
-                                            t-att-src="image_data_uri(doc.image_1920)" alt="Image" />
+                                            t-att-src="image_data_uri(doc.image_1920)" alt="Image"
+                                            style="max-width: 150px; max-height: 150px" />
                                     </td>
                                     <t t-set="pricelist_8"
                                         t-value="env['product.pricelist'].search([('is_wholesaleprices','=',True)])" />
