[FIX]: hide margin

--- a/qs_sale/views/sale_order_views.xml
+++ b/qs_sale/views/sale_order_views.xml
@@ -51,5 +51,16 @@
                 </field>
             </field>
         </record>
+
+        <record id="inherit_sale_margin_sale_order_line_form" model="ir.ui.view">
+            <field name="name">sale.order.view.form.inherit</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale_margin.sale_margin_sale_order_line_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='margin']" position="attributes">
+                    <attribute name="groups">qs_sale.margin_access</attribute>
+                </xpath>
+            </field>
+        </record>
     </data>
 </odoo>
