--- a/qs_sale/report/sale_report_scheduler_report.xml
+++ b/qs_sale/report/sale_report_scheduler_report.xml
@@ -30,10 +30,12 @@
                                             t-options='{"widget": "float", "precision":2}' />
                                     </td>
                                     <td>
-                                        <t t-out="val.get('purchase_price')" t-options='{"widget": "float", "precision":2}' />
+                                        <t t-out="val.get('purchase_price')"
+                                            t-options='{"widget": "float", "precision":2}' />
                                     </td>
                                     <td>
-                                        <t t-out="val.get('margin')" t-options='{"widget": "float", "precision":2}' />
+                                        <t t-out="val.get('margin')"
+                                            t-options='{"widget": "float", "precision":2}' />
                                     </td>
                                 </tr>
                                 <tr>
@@ -42,17 +44,20 @@
                                     </td>
                                     <td>
                                         <strong>
-                                            <t t-out="total.get('turnover_total')" t-options='{"widget": "float", "precision":2}' />
+                                            <t t-out="total.get('turnover_total')"
+                                                t-options='{"widget": "float", "precision":2}' />
                                         </strong>
                                     </td>
                                     <td>
                                         <strong>
-                                            <t t-out="total.get('purchase_price_total')" t-options='{"widget": "float", "precision":2}' />
+                                            <t t-out="total.get('purchase_price_total')"
+                                                t-options='{"widget": "float", "precision":2}' />
                                         </strong>
                                     </td>
                                     <td>
                                         <strong>
-                                            <t t-out="total.get('margin_total')" t-options='{"widget": "float", "precision":2}' />
+                                            <t t-out="total.get('margin_total')"
+                                                t-options='{"widget": "float", "precision":2}' />
                                         </strong>
                                     </td>
                                 </tr>
