--- a/thermal_invoice/report/invoice_external_layout.xml
+++ b/thermal_invoice/report/invoice_external_layout.xml
@@ -12,7 +12,7 @@
             <t t-if="not o or not 'company_id' in o">
                 <t t-set="company" t-value="res_company"/>
             </t>
-            <div class="header">
+            <!-- <div class="header">
                 <div class="float-right">
                     <h3 class="mt0 text-right" t-field="company.report_header"/>
                 </div>
@@ -20,7 +20,7 @@
                     <img t-if="company.logo" t-att-src="image_data_uri(company.logo)"
                          style="max-height: 35px; float:center;"/>
                 </center>
-            </div>
+            </div> -->
             <div style="margin-top:0px;" class="article din" t-att-data-oe-model="o and o._name"
                  t-att-data-oe-id="o and o.id">
                 <t t-raw="0"/>
