--- a/thermal_invoice/report/report_invoice.xml
+++ b/thermal_invoice/report/report_invoice.xml
@@ -16,7 +16,7 @@
                         <t t-set="company" t-value="res_company"/>
                     </t>
                     <div style="border-bottom:1pt dashed black;text-align:center">
-                        <div style="font-size:18pt;font-weight:bold">
+                        <div style="font-size:19pt;font-weight:bolder">
                             <t t-esc="company.name"/>
                             <br/>
                         </div>
@@ -48,8 +48,8 @@
                         </colgroup>-->
                         <tr t-if="o.partner_id">
                             <td style="padding-top:3pt;padding-bottom:3pt;">Client</td>
-                            <td style="padding-top:3pt;padding-bottom:3pt;padding-left:3pt">:</td>
-                            <td style="text-align:left;vertical-align:bottom;padding-right:5pt;padding-top:3pt;padding-bottom:3pt;word-wrap: break-word !important;width:10px !important;">
+                            <td style="padding-top:3pt;padding-bottom:3pt;padding-left:3pt">: </td>
+                            <td style="text-align:left;vertical-align:bottom;padding-right:5pt;padding-top:3pt;padding-bottom:3pt;word-wrap: break-word !important;width:10px !important;padding-left:3pt">
                                 <span style="text-align:left;vertical-align:bottom;padding-right:5pt;padding-top:3pt;padding-bottom:3pt;word-wrap: break-word !important;width:10px !important;" t-field="o.partner_id"
                                       t-options='{"text": "contact", "fields": ["address", "name"], "no_marker": True}'/>
                                 ,
@@ -68,15 +68,8 @@
                                 Facture N°
                             </td>
                             <td style="vertical-align:bottom;padding-left:3pt">:</td>
-                            <td style="text-align:left;vertical-align:bottom;">
+                            <td style="text-align:left;vertical-align:bottom;padding-left:3pt">
                                 <t t-esc="o.name"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="vertical-align:bottom;padding-top:3pt;padding-bottom:3pt">Date</td>
-                            <td style="vertical-align:bottom;padding-top:3pt;padding-bottom:3pt;padding-left:3pt">:</td>
-                            <td style="vertical-align:bottom;text-align:left;padding-top:5pt;padding-bottom:3pt;padding-right:3pt">
-                                <t t-esc="o.invoice_date"/>
                             </td>
                         </tr>
 
@@ -92,8 +85,8 @@
                                 <br/>Article
                             </th>
 
-                            <th style="border-bottom:1pt dashed black;vertical-align:bottom;text-align:right;margin-bottom:5pt;padding-bottom:3pt;">
-                                <br/>Qtt
+                            <th style="border-bottom:1pt dashed black;vertical-align:bottom;text-align:center;margin-bottom:5pt;padding-bottom:3pt;">
+                                <br/>Qté
                             </th>
 
                             <th style="border-bottom:1pt dashed black;vertical-align:bottom;text-align:center;margin-bottom:5pt;padding-bottom:3pt;">
@@ -102,7 +95,7 @@
                         </tr>
                         <tr t-foreach="o.invoice_line_ids" t-as="orderline" style="margin-top:5pt">
 
-                            <td style="text-align:left;vertical-align:bottom;margin-right:15pt;padding-top:3pt;padding-bottom:3pt;word-wrap: break-word;">
+                            <td style="text-align:left;vertical-align:bottom;margin-right:15pt;padding-top:3pt;padding-bottom:3pt;word-wrap: break-word;font-size:14pt">
                                 <t t-esc="orderline.name"/>
                                 <t t-if="orderline.discount">
                                     <span>avec un</span>
@@ -112,11 +105,11 @@
                                     <span>discount</span>
                                 </t>
                             </td>
-                            <td style="text-align:right;padding-bottom:3pt;padding-top:2pt;vertical-align:top"
+                            <td style="text-align:center;padding-bottom:3pt;padding-top:2pt;vertical-align:top;font-size:14pt"
                                 class="pos-right-align">
                                 <t t-esc="orderline.quantity"/>
                             </td>
-                            <td style="text-align:left;padding-bottom:3pt;padding-top:2pt;vertical-align:top">
+                            <td style="text-align:center;padding-bottom:3pt;padding-top:2pt;vertical-align:top;font-size:14pt">
                                 <span t-esc="orderline.price_subtotal"
                                       t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                             </td>
@@ -124,11 +117,11 @@
                     </table>
                     <table style="border-bottom:1pt dashed black;font-size:16pt" class='receipt-total'>
                         <colgroup>
-                            <col width='24%'/>
+                            <col width='26%'/>
                             <col width='1%'/>
                             <col width='56%'/>
                             <col width='1%'/>
-                            <col width='18%'/>
+                            <col width='16%'/>
                         </colgroup>
                         <tr>
                             <td style="padding-bottom:5pt;padding-top:5pt">Sous total</td>
@@ -137,7 +130,7 @@
                             </td>
                             <td style="padding-bottom:5pt;padding-top:5pt">:</td>
                             <td class="text-right o_price_total"
-                                style="text-align:left;padding-bottom:5pt;padding-top:5pt;padding-right:6pt">
+                                style="text-align:left;padding-bottom:5pt;padding-top:5pt;padding-right:6pt;font-size:15pt;">
                                 <span t-esc="o.amount_untaxed"
                                       t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                             </td>
@@ -172,6 +165,36 @@
                                 style="font-weight:bold;text-align:right;padding-bottom:5pt;padding-right:6pt">
                                 <span t-esc="o.amount_total"
                                       t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                            </td>
+                        </tr>
+                    </table>
+                    <table style="border-bottom:1pt dashed black;margin-top:10px;padding:5pt;font-size:15pt">
+                        <colgroup>
+                            <col width='24%'/>
+                            <col width='1%'/>
+                            <col width='56%'/>
+                            <col width='1%'/>
+                            <col width='16%'/>
+                        </colgroup>
+                        <tr>
+                            <td style="vertical-align:bottom;padding-top:3pt;padding-bottom:3pt">Date</td>
+                            <td style="vertical-align:bottom;padding-top:3pt;padding-bottom:3pt;">:</td>
+                            <td style="vertical-align:bottom;text-align:left;padding-top:5pt;padding-bottom:3pt;padding-left:3pt">
+                                <t t-esc="o.invoice_date"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="vertical-align:bottom;padding-top:3pt;padding-bottom:3pt">Livré le</td>
+                            <td style="vertical-align:bottom;padding-top:3pt;padding-bottom:3pt;">:</td>
+                            <td style="vertical-align:bottom;text-align:left;padding-top:5pt;padding-bottom:3pt;padding-right:3pt">
+
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="vertical-align:bottom;padding-top:3pt;padding-bottom:3pt">Contrôlé par</td>
+                            <td style="vertical-align:bottom;padding-top:3pt;padding-bottom:3pt;">:</td>
+                            <td style="vertical-align:bottom;text-align:left;padding-top:5pt;padding-bottom:3pt;padding-right:3pt">
+
                             </td>
                         </tr>
                     </table>
