--- a/hrsft_facture_montant_lettres_qweb/views/report_invoice.xml
+++ b/hrsft_facture_montant_lettres_qweb/views/report_invoice.xml
@@ -2,8 +2,6 @@
 <odoo>
     <data>
         <template id="report_invoice_document" inherit_id="account.report_invoice_document">
-
-
             <xpath expr="//table[@name='invoice_line_table']" position="attributes">
                 <attribute name="class">table table-sm</attribute>
             </xpath>
@@ -62,7 +60,6 @@
                         RCS : <span t-field="o.partner_id.RCS"/>
                     </div>
                 </t>
-
             </xpath>
 
             <xpath expr="//p[@name='payment_communication']" position="replace">
@@ -102,7 +99,7 @@
                 <attribute name="invisible">1</attribute>
             </field>-->
             <xpath expr="//div[@class='page']/h2" position="replace">
-                <h6>
+                <h6 style="margin-top: -30px !important">
                     <span t-if="o.move_type == 'out_invoice' and o.state == 'posted'">BON DE LIVRAISON/FACTURE </span><br></br>
                     <span t-if="o.move_type == 'out_invoice' and o.state == 'draft'">Facture brouillon</span>
                     <span t-if="o.move_type == 'out_invoice' and o.state == 'cancel'">Facture annulée</span>
@@ -122,11 +119,12 @@
                     </div>
                     <div class="col-6">
                         <table class="table table-sm" style="page-break-inside: avoid;">
-
                             <!--Tax totals-->
                             <t t-set="tax_totals" t-value="json.loads(o.tax_totals_json)"/>
                             <t t-call="account.document_tax_totals"/>
-
+                            <tr>
+                                <td></td>
+                            </tr>
                             <!--Payments-->
                             <t t-if="print_with_payments">
                                 <t t-if="o.payment_state != 'invoicing_legacy'">
@@ -146,7 +144,7 @@
                                     </t>
                                     <t t-if="len(payments_vals) > 0">
                                         <tr class="border-black">
-                                            <td><strong>Amount Due</strong></td>
+                                            <td><strong>Montant dû</strong></td>
                                             <td class="text-right">
                                                 <span t-field="o.amount_residual"/>
                                             </td>
@@ -157,28 +155,40 @@
                         </table>
                     </div>
                 </div>
-
             </xpath>
 
             <xpath expr="//div[@class='clearfix']" position="after">
-                <div class="row">
-                    <div class="col-4">
-                        <strong><span>Le client <br/><br/></span></strong>
-
-
-                    </div>
-                    <div class="col-4">
-                        <span><br/><br/></span>
-
-                    </div>
-                    <div class="col-4">
-                        <strong><span>Le magasinier <br/><br/></span></strong>
-
-                    </div>
-                </div>
-
+                <table width="100%" cellspacing="1" cellpadding="5">
+                    <thead>
+                        <tr>
+                            <th style="width: 15%"></th>
+                            <th style="width: 35%">Le client</th>
+                            <th style="width: 35%">Le magasin</th>
+                            <th style="width: 35%">Le contrôleur</th>
+                        </tr>
+                    </thead>
+                    <tbody style="color: black !important">
+                        <tr style="background-color: transparent !important">
+                            <td>Signature : </td>
+                            <td>-------------------</td>
+                            <td>-------------------</td>
+                            <td>-------------------</td>
+                        </tr>
+                        <tr style="background-color: transparent !important">
+                            <td>Nom : </td>
+                            <td>-------------------</td>
+                            <td>-------------------</td>
+                            <td>-------------------</td>
+                        </tr>
+                        <tr style="background-color: transparent !important">
+                            <td>Date de livraison : </td>
+                            <td>-------------------</td>
+                            <td>-------------------</td>
+                            <td>-------------------</td>
+                        </tr>
+                    </tbody>
+                </table>
             </xpath>
-
         </template>
 
         <template id="report_invoice_document_total_tax" inherit_id="account.document_tax_totals">
@@ -190,7 +200,6 @@
                     <t t-if="line.product_id.id == 2">
                         <t t-set="remise" t-value="line.price_total"/>
                     </t>
-
                 </t>
                 <tr t-if="remise != 0">
                     <td><strong>Remise % :</strong></td>
@@ -198,10 +207,8 @@
                         <t t-set="remiseenpers" t-value="(-100)*remise/((-1)*remise + o.amount_total)"/>
                         <t t-out="remiseenpers" t-options='{"widget": "float", "precision":2}'/>
                     </td>
-
                 </tr>
             </xpath>
-
         </template>
     </data>
 </odoo>
