--- a/qs_account/report/report_invoice.xml
+++ b/qs_account/report/report_invoice.xml
@@ -45,6 +45,10 @@
                 </tr>
             </xpath>
 
+            <xpath expr="//div[@id='informations']" position="attributes">
+                <attribute name="class" remove="mt-4 mb-4" separator=" "/>
+            </xpath>
+
             <!--<xpath expr="//t[@t-call='web.external_layout']" position="replace">
                 <t t-call="web.html_container">
                     <t t-set="data_report_margin_top" t-value="1" />
